Break out write of markdown/versiontxt into their own classes.